RESOLVED FIXED139597
Fixed positioned pseudo content does not get composited.
https://bugs.webkit.org/show_bug.cgi?id=139597
Summary Fixed positioned pseudo content does not get composited.
alan
Reported 2014-12-12 14:27:02 PST
ssia.
Attachments
Test reduction. (224 bytes, text/html)
2014-12-12 14:31 PST, alan
no flags
Patch (4.62 KB, patch)
2014-12-12 16:10 PST, alan
no flags
Patch (4.68 KB, patch)
2014-12-12 16:11 PST, alan
no flags
Archive of layout-test-results from ews100 for mac-mountainlion (514.10 KB, application/zip)
2014-12-12 16:54 PST, Build Bot
no flags
Patch (4.67 KB, patch)
2014-12-13 19:58 PST, alan
no flags
Archive of layout-test-results from ews102 for mac-mountainlion (507.50 KB, application/zip)
2014-12-13 20:39 PST, Build Bot
no flags
Patch (4.73 KB, patch)
2014-12-13 20:54 PST, alan
no flags
alan
Comment 1 2014-12-12 14:31:04 PST
Created attachment 243218 [details] Test reduction. 1. Turn on ‘show compositing layer’ setting in Safari. 2. Open attached test case. Observe that the before content does not get composited. (lack of compositing border) 
alan
Comment 2 2014-12-12 14:31:26 PST
alan
Comment 3 2014-12-12 16:10:04 PST
alan
Comment 4 2014-12-12 16:11:01 PST
Build Bot
Comment 5 2014-12-12 16:54:50 PST
Comment on attachment 243227 [details] Patch Attachment 243227 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5649633896300544 New failing tests: compositing/fixed-positioned-pseudo-content-no-compositing.html
Build Bot
Comment 6 2014-12-12 16:54:53 PST
Created attachment 243232 [details] Archive of layout-test-results from ews100 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 7 2014-12-13 19:58:16 PST
Build Bot
Comment 8 2014-12-13 20:39:48 PST
Comment on attachment 243261 [details] Patch Attachment 243261 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6165668579770368 New failing tests: compositing/fixed-positioned-pseudo-content-no-compositing.html
Build Bot
Comment 9 2014-12-13 20:39:52 PST
Created attachment 243263 [details] Archive of layout-test-results from ews102 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 10 2014-12-13 20:54:01 PST
WebKit Commit Bot
Comment 11 2014-12-13 22:43:52 PST
Comment on attachment 243264 [details] Patch Clearing flags on attachment: 243264 Committed r177258: <http://trac.webkit.org/changeset/177258>
WebKit Commit Bot
Comment 12 2014-12-13 22:43:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.