https://bugs.webkit.org/show_bug.cgi?id=139597 rdar://problem/19237334 Fixed positioned pseudo content does not get composited.

Reviewed by Simon Fraser.

This patch ensures that adjustRenderStyle() can access to settings even when Element* is null.

Source/WebCore:

Test: compositing/fixed-positioned-pseudo-content-no-compositing.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::adjustRenderStyle):

LayoutTests:

* compositing/fixed-positioned-pseudo-content-no-compositing-expected.txt: Added.
* compositing/fixed-positioned-pseudo-content-no-compositing.html: Added.


Canonical link: https://commits.webkit.org/157497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177258 268f45cc-cd09-0410-ab3c-d52691b4dbfc